# housing_prices

./: LICENSE  README.md  main.ipynb  pyproject.toml  test.ipynb
.ipynb_checkpoints/: main-checkpoint.ipynb
lib/: feature_engineering.py  functions.py
lib_old/: diagnosis.py  options.py
notebooks/: baseline.ipynb  final_pipeline.ipynb  main.ipynb  make_geo_features.py  predict_high_value.ipynb  predict_housing.ipynb  predict_housing_embeddings.ipynb  predict_housing_intervals.ipynb
src/: __init__.py  root.py
src/config/: config.py  config_make.py  config_read.py
src/lib/: lib.py  lib_default.py  lib_external.py
src/make/: __init__.py  make.py  make_process.py  make_transform.py
src/read/: __init__.py  read.py  read_origins.py  read_sources.py
